Added card style

--- a/InovApi/templates/base/index.html.twig
+++ b/InovApi/templates/base/index.html.twig
@@ -10,31 +10,42 @@
             <li class="text-center text-primary mb-4 pb-4 display-2">Apprendre l'Anglais est un jeu d'enfant</li>
         </ul>
     </div>
-    <div class="card" style="margin-top: 25%">
+    <div class="cardup card" style="margin-top: 25%">
 
         <div class="container">
             <img src="./css/fun.jpg" class="imgRight">
 
             <span>
-                <h1>Qu'est-ce qu'Innov'Anglais ?<br/></h1>
-                <h2><br/>Innov'Anglais est une application qui vas vous aidez pour l'aprentissage de l'anglais, que se soit pour votre culture général, ou dans le cadre de votre travail.</h2>      
+                <h1>Qu'est-ce qu'Innov'Anglais ?<br /></h1>
+                <h2><br />Innov'Anglais est une application qui vas vous aidez pour l'aprentissage de l'anglais, que se soit pour votre culture général, ou dans le cadre de votre travail.</h2>
             </span>
-    
+
         </div>
     </div>
-    <div class="card" style="margin-top: 5%">
+    <div class="cardup card" style="margin-top: 5%">
 
         <div class="container">
-            <img src="./css/english.jpg" class="imgLeft"> 
-        
+            <img src="./css/english.jpg" class="imgLeft">
+
             <span>
-                <h1>Title<h1>
-                <h2>Text,Text,Text,Text,Text,Text,Text,Text,Text,Text,</h2>
+                <h1>Pourquoi apprendre l'anglais?</h1>
+                <h2>L'anglais est considéré comme langue universelle dans le monde. Cela nous permet donc de communiquer avec n'importe qui autour du globe.</h2>
             </span>
-    
+
         </div>
     </div>
-    
+    <div class="cardup card" style="margin-top: 5%">
+
+        <div class="container">
+            <span class="text-center">
+                <h1>Près a vous lançez ?</h1>
+                <h4>Commencez a apprendre l'anglais dès maintenant en vous <a href="{{path('app_login')}}">créant un compte</a> et en commencer l'un de nos exercice.</h4>
+                <h4>Vous avez dèja commencer votre apprentissage de l'anglais? Vous pouvez <a href="{{path('app_login')}}">vous connecter</a> et commencer vos exercice du jour.</h4>
+            </span>
+
+        </div>
+    </div>
+
 </div>
 {% endblock %}
 
