--- a/InovApi/templates/classement/index.html.twig
+++ b/InovApi/templates/classement/index.html.twig
@@ -3,12 +3,12 @@
 {% block title %}Hello ClassementController!{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container cardup-log" style="margin-top: 5%">
     <div class="container text-center">
         <h1 class="">Voici le classement du site !</h1>
         <p>Les meilleurs sont en premier</p>
     </div>
-    <table class="table table-bordered caption-top navstyle">
+    <table class="table table-bordered caption-top tabstyle">
         <thead>
             <tr>
                 <td>
