--- a/InovApi/templates/registration/register.html.twig
+++ b/InovApi/templates/registration/register.html.twig
@@ -3,76 +3,82 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    {% if app.user %}
-    <div class="mb-3 content">
-        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-    </div>
-    {% endif %}
-    {{ form_start(registrationForm) }}
-    <!--row d-flex justify-content-center align-items-center h-100 -->
-    <section class="h-100">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-xl-10">
-                    <div class="card rounded-3 text-black connect-box">
-                        <div class="row g-0">
-                            <div class="col-lg-6">
-                                <div class="card-body p-md-5 mx-md-4 color-left">
+{% if app.user %}
+<div class="mb-3 content">
+    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+</div>
+{% endif %}
+{{ form_start(registrationForm) }}
+<!--row d-flex justify-content-center align-items-center h-100 -->
+<section class="h-100">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-xl-10">
+                <div class="card rounded-3 text-black connect-box">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4 color-left">
 
-                                    <div class="text-center">
-                                        <img src="./assets/logo.png" style="width: 185px;" alt="logo">
-                                        <h4 class="mt-1 mb-5 pb-1">Nous sommes Innov'Anglais</h4>
-                                    </div>
+                                <div class="text-center">
+                                    <img src="./assets/logo.png" style="width: 185px;" alt="logo">
+                                    <h4 class="mt-1 mb-5 pb-1">Nous sommes Innov'Anglais</h4>
+                                </div>
 
-                                        <p>Veuillez vous inscrire</p>
+                                <p>Veuillez vous inscrire</p>
 
-                                        <div class="form-outline mb-4">
-                                            {{ form_row(registrationForm.username, {
+                                <div class="form-outline mb-4">
+                                    {{ form_row(registrationForm.username, {
                                                 label: 'Login de l\'utilisateur'
                                             }) }}
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            {{ form_row(registrationForm.nom, {
+                                </div>
+                                <div class="form-outline mb-4">
+                                    {{ form_row(registrationForm.nom, {
                                                 label: 'Nom de l\'utilisateur'
                                             }) }}
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            {{ form_row(registrationForm.prenom, {
+                                </div>
+                                <div class="form-outline mb-4">
+                                    {{ form_row(registrationForm.prenom, {
                                                 label: 'Prenom de l\'utilisateur'
                                             }) }}
-                                        </div>
+                                </div>
 
-                                        <div class="form-outline mb-4">
-                                            {{ form_row(registrationForm.plainPassword, {
+                                <div class="form-outline mb-4">
+                                    {{ form_row(registrationForm.plainPassword, {
                                                 label: 'Mot de passe'
                                             }) }}
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            {{ form_row(registrationForm.agreeTerms) }}
-                                        </div>
-                                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                                        <div class="text-center pt-1 mb-5 pb-1">
-                                            <button type="submit" class="btn btn-primary btn-block fa-lg mb-3">Créer un compte</button>
-                                        </div>
+                                </div>
+                                <div class="form-outline mb-4 text-center">
+                                    {{ form_row(registrationForm.agreeTerms, {
+                                        label: 'J\'accepte les conditions d\'utilition'
+                                    }) }}
+                                </div>
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                <div class="text-center pt-1 mb-5 pb-1">
+                                    <button type="submit" class="btn btn-primary btn-block fa-lg mb-3">Créer un compte</button>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-center pb-4">
+                                    <p class="mb-0 me-2">Vous avez déjà un compte?</p>
+                                    <a href="{{path('app_login')}}">Se connecter</a>
+                                </div>
 
-                                </div>
                             </div>
-                            <div class="col-lg-6 d-flex align-items-center instyle">
-                                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                    <div class="connect-box"></div>
-                                    <h4 class="mb-4">Nous sommes bien plus qu'une simple application</h4>
-                                    <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                </div>
+                        </div>
+                        <div class="col-lg-6 d-flex align-items-center instyle">
+                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                <div class="connect-box"></div>
+                                <h4 class="mb-4">Nous sommes bien plus qu'une simple application</h4>
+                                <p class="small mb-0">Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
+                                    Avec Innov'Anglais, testé vos connaissances linguistiques grâce à notre outil.
+                                    Ce dernier est totalement gratuit et est développer continuellement. </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    {#
+    </div>
+</section>
+{#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
 
