--- a/InovApi/templates/test/index.html.twig
+++ b/InovApi/templates/test/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container cardup-log" style="margin-top: 5%">
     <div class="container text-center">
         <h1>Il y a actuellement
             {{lesTests|length}}
@@ -13,7 +13,7 @@
     </div>
     {% set index = 1 %}
 
-    <table class="table table-bordered caption-top navstyle">
+    <table class="table table-bordered caption-top">
         <thead>
             <tr>
                 <td>
