--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -31,8 +31,8 @@
     border-radius: 0.5%;
 }
 
-.ccm div{ 
-    padding-top:20px;
+.ccm div {
+    padding-top: 20px;
     padding-bottom: 20px;
     margin-left: 4%;
 }
@@ -98,25 +98,25 @@ span:after {
 }
 
 .imgLeft {
-    padding-top:20px;
+    padding-top: 20px;
     width: 500px;
     height: 400px;
     border: 0;
     vertical-align: middle;
     float: left;
-    padding-bottom:20px;
-    padding-right:20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 .imgRight {
-    padding-top:20px;
+    padding-top: 20px;
     width: 500px;
     height: 400px;
     border: 0;
     vertical-align: middle;
     float: right;
-    padding-bottom:20px;
-    padding-left:20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
 }
 
 footer {
@@ -130,19 +130,33 @@ footer {
 }
 
 div article {
-    border-radius:0.5%;
+    border-radius: 0.5%;
     margin-left: 5%;
-    margin-right:70%;
-    padding-right:180px;
+    margin-right: 70%;
+    padding-right: 180px;
 }
 
-.card {
-    padding-top:20px;
-    padding-bottom:20px;
-    background-color: rgba(255, 255, 255, 0.8);
+.cardup {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.8) !important;
     height: 50%;
     margin-left: 5%;
     margin-right: 5%;
-    border-radius: 0.5%;
+    border-radius: 0.7%;
 }
 
+.tabstyle {
+    background: rgba(0, 155, 186, 0.7);
+    margin: 0;
+    box-sizing: border-box;
+    border-width: 0;
+}
+
+.cardup-log {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.8) !important;
+    height: 50%;
+    border-radius: 0.7%;
+}
