--- a/InovApi/templates/security/login.html.twig
+++ b/InovApi/templates/security/login.html.twig
@@ -49,7 +49,7 @@
 
                                         <div class="d-flex align-items-center justify-content-center pb-4">
                                             <p class="mb-0 me-2">Vous n'avez pas de compte ?</p>
-                                            <a href="#">Se créer un compte</a>
+                                            <a href="{{path('app_register')}}">Se créer un compte</a>
                                         </div>
 
                                     </form>
@@ -60,9 +60,9 @@
                                 <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                                     <div class="connect-box"></div>
                                     <h4 class="mb-4">Nous sommes bien plus qu'une simple application</h4>
-                                    <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <p class="small mb-0">Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
+                                        Avec Innov'Anglais, testé vos connaissances linguistiques grâce à notre outil.
+                                        Ce dernier est totalement gratuit et est développer continuellement. </p>
                                 </div>
                             </div>
                         </div>
