Made change to the footer

--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -110,7 +110,7 @@
     {% endblock %}
     <article class="content connect-art" style="margin-top: 12%">
         <footer id="footer">
-            2021. This web page is open source, go check out the source of this page on <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Github</a>.
+            <br> 2022. Ce site a était fait par les SIO 2D, plus précisemment par <a href="{{path ('app_information')}}">cet équipe</a>.
         </footer>
     </article>
 
