--- a/InovApi/templates/profil/index.html.twig
+++ b/InovApi/templates/profil/index.html.twig
@@ -8,7 +8,7 @@
 {{form_start(form)}}
 <div class="container rounded mt-5 mb-5 connect-pro card cardup-log" style="margin-top: 7%">
 
-    <h1 class="text-center">Bienvenue sur votre profil :
+    <h1 class="text-center">Bienvenue sur votre profil,
         {{app.user.prenom}}
         !</h1>
     <p class="text-center">Vous avez cumulé plus de
