--- a/InovApi/templates/classement/index.html.twig
+++ b/InovApi/templates/classement/index.html.twig
@@ -8,7 +8,7 @@
         <h1 class="">Voici le classement du site !</h1>
         <p>Les meilleurs sont en premier</p>
     </div>
-    <table class="table table-bordered caption-top navstyle">
+    <table class="table table-danger table-bordered caption-top navstyle">
         <thead>
             <tr>
                 <td>
@@ -21,7 +21,7 @@
         </thead>
         <tbody>
             {% for user in users | sort((a, b) => b.scoreTotal <=> a.scoreTotal)%}
-            <tr class="{{ cycle(['table-black', 'table-secondary'], loop.index0) }}">
+            <tr class="{{ cycle(['table-dark', 'table-secondary'], loop.index0) }}">
                 <td>{{user.nom | capitalize}}
                 </td>
                 <td>{{user.prenom | capitalize}}
