--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -108,7 +108,7 @@
     {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     {% endblock %}
-    <article class="content connect-art" style="margin-top: 12%">
+    <article class="footer connect-art">
         <footer id="footer">
             <br> 2022. Ce site a était fait par les SIO 2D, plus précisemment par <a href="{{path ('app_information')}}">cet équipe</a>.
         </footer>
