--- a/InovApi/templates/information/ccm.html.twig
+++ b/InovApi/templates/information/ccm.html.twig
@@ -8,7 +8,7 @@
         <p class="container m-5 text-white">
             Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
             <br>Avec Innov'Anglais, testé vos connaissances linguistiques grâce à notre outil situé en page
-            "<a href="{{path('app_apprendre')}}">Apprendre</a>".
+            "<a href="{{path('app_test')}}">Apprendre</a>".
 
 
             <br>
