--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navstyle">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{path('app_base')}}">
-                <img src="{{'./assets/logo.png'}}" alt="Innov'Anglais" style="width:100px;height:70px;">
+                <img src="{{ asset('assets/logo.png') }}" alt="Innov'Anglais" style="width:100px;height:70px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
